# logitech

./: .pre-commit-config.yaml  README.md  behave.ini  pyproject.toml
requirements/: base.txt
scripts/: run_all_tests.sh
src/logitech/: logger.py
src/logitech/api/: mock_api.py
src/logitech/buggy_calc/helpers/: adb_controller.py  exceptions.py  parser.py
src/logitech/buggy_calc/pages/: calculator.py
tests/api/: test_user.py
tests/bdd/features/: calculator_basic.feature  environment.py
tests/bdd/features/steps/: calculator_steps.py
tests/buggy_calc/: e2e_test_description.md  test_adb_controller.py  test_calculator.py  test_e2e.py  test_ui_parser.py
tests/buggy_calc/resources/: xml_dump.txt
